unpackaged/main/default/objects/ContractRenewerEvent__e/ContractRenewerEvent__e.object-meta.xml
<CustomObject>
    <description>Event used to manage renewed quotes status for order and contract creation.</description>
    <label>ContractRenewerEvent</label>
    <pluralLabel>ContractRenewerEvents</pluralLabel>
</CustomObject>