unpackaged/main/default/objects/ContractRenewerEvent__e/fields/contractsToNotify__c.field-meta.xml
<CustomField>
    <fullName>contractsToNotify__c</fullName>
    <label>contractsToNotify</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>