unpackaged/main/default/objects/ContractRenewerEvent__e/fields/quoteContractIdsMap__c.field-meta.xml
<CustomField>
    <fullName>quoteContractIdsMap__c</fullName>
    <description>List of old contract ids associated to new quote ids</description>
    <label>quoteContractIdsMap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>