unpackaged/main/default/objects/ContractRenewerEvent__e/fields/quoteIds__c.field-meta.xml
<CustomField>
    <fullName>quoteIds__c</fullName>
    <description>List of quotes to approve</description>
    <label>quoteIds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>